fixed display issue with inadequate view height for products on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -833,7 +833,8 @@ footer p {
     /* Trim the height to be automatic on mobile views */
     #Contact,
     #Stockists,
-    #Our-Story {
+    #Our-Story, 
+    #Products {
         height: auto;
     }
 
